# alert-alchemy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAY.bat  README.md  RUN.txt  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: write-an-incident.md
incidents/: 001-memory-leak.yaml  002-db-pool.yaml  003-bad-config.yaml
scripts/: build.ps1  build.sh  export_web_data.py  generate_incident_pack.py
src/alert_alchemy/: __init__.py  __main__.py  cli.py  engine.py  gui_launcher.py  interactive.py  loader.py  models.py  render.py  scoring.py  state.py  util.py
tests/: __init__.py  test_engine_resolve.py  test_interactive.py  test_loader.py  test_scoring.py  test_web_data.py
web/: 404.html  app.js  index.html  style.css
web/data/: incidents.json
web/game/: game.js
web/game/scenes/: IncidentScene.js  MenuScene.js  WorldScene.js
web/game/ui/: HUD.js  Modal.js
